fixed text alignment, font, outline color and border radius of add new car form

--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -2,7 +2,7 @@
 
 <section class="all-cars">
 
-<h1>ALL CARS</h1>
+<h1>ALL ADDED <%= @current_user.user_name.upcase %>'S CARS</h1>
 
 <div class="all-cars">  
 <% @cars.each do |car| %>
