--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,11 +20,11 @@
                 <% if is_logged_in? && is_dealer? %>
 
                     <li class="pure-menu-item">
-                        <a href="/" class="pure-menu-link"> <%= @current_user.user_name.capitalize %>'s Cars </a>
+                        <a href="/cars" class="pure-menu-link"> <%= @current_user.user_name.capitalize %>'s Cars </a>
                     </li>
 
                     <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                        <a href="/cars" id="menuLink1" class="pure-menu-link">Cars</a>
+                        <a href="/" id="menuLink1" class="pure-menu-link">Cars</a>
                         <ul class="pure-menu-children">
                         
                             <li class="pure-menu-item"><a href="/cars/new" class="pure-menu-link">Add Car</a></li> 
@@ -33,6 +33,14 @@
 
                     <li class="pure-menu-item">
                         <a href="/logout" class="pure-menu-link">Logout</a>
+                    </li>
+
+                    <li class="pure-menu-item">
+                        <a href="/about" class="pure-menu-link">About</a>
+                    </li>
+                    
+                    <li class="pure-menu-item">
+                        <a href="/contact" class="pure-menu-link">Contact</a>
                     </li>
 
                     
@@ -62,6 +70,13 @@
 
                     <li class="pure-menu-item">
                         <a href="/logout" class="pure-menu-link">Logout</a>
+                    </li>
+                    <li class="pure-menu-item">
+                        <a href="/about" class="pure-menu-link">About</a>
+                    </li>
+                    
+                    <li class="pure-menu-item">
+                        <a href="/contact" class="pure-menu-link">Contact</a>
                     </li>
 
                 <% else %>
