--- a/app/views/dealers/new.erb
+++ b/app/views/dealers/new.erb
@@ -1,24 +1,34 @@
+
+<section class="add-new-car">
+  
+
+<div class="pure-g">
+
 <h1>ADD NEW CAR</h1>
+  
+  <li class="pure-u-1" class="add-new-car">
+  <form class="pure-form pure-form-stacked" method="post" action="/cars">
+    <fieldset>
+    <legend>Register</legend>
 
-<form class="pure-form pure-form-stacked" method="post" action="/cars">
-  <fieldset>
-  <legend>Register</legend>
+      <label for="make">Make</label>
+      <input name="car[make]" id="make" type="make" placeholder="Make">
 
-    <label for="make">Make</label>
-    <input name="car[make]" id="make" type="make" placeholder="Make">
+      <label for="model">Model</label>
+      <input name="car[model]"id="model" type="model" placeholder="Model">
 
-    <label for="model">Model</label>
-    <input name="car[model]"id="model" type="model" placeholder="Model">
+      <label for="year">Year</label>
+      <input name="car[year]" id="year" type="year" placeholder="Year">
+      
+      <label for="price">Price</label>
+      <input name="car[price]" id="price" type="price" placeholder="Price">
 
-    <label for="year">Year</label>
-    <input name="car[year]" id="year" type="year" placeholder="Year">
-    
-    <label for="price">Price</label>
-    <input name="car[price]" id="price" type="price" placeholder="Price">
+      <label for="image">Image</label>
+      <input name="car[image]" placeholder="Image URL">
 
-    <label for="image">Image</label>
-    <input name="car[image]" placeholder="Image URL">
+      <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
+    </fieldset>
+  </form>
+  </li>
 
-    <button type="add_car" class="pure-button pure-button-primary">Add Car</button>
-  </fieldset>
-</form>
+</section>
