--- a/app/views/cars/index.erb
+++ b/app/views/cars/index.erb
@@ -2,7 +2,15 @@
 
 <section class="all-cars">
 
-<h1>ALL ADDED <%= @current_user.user_name.upcase %>'S CARS</h1>
+<% if is_dealer? %>
+
+<h1>ALL <%= @current_user.user_name.upcase %> 'S ADDED CARS</h1>
+
+<% else %>
+
+<h1>ALL CARS AVAILABLE TO <%= @current_user.user_name.upcase %> </h1>
+
+<% end %>
 
 <div class="all-cars">  
 <% @cars.each do |car| %>
