--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -3,9 +3,9 @@
 <ul>
   <% current_user.cars.each do |car| %>
   <a href="/cars/<%= car.id %>"><li><img src="<%= car.image %>" width="400"></li></a>
-  <form method="post" action="/users/cars/<%= car.id %>/delete">
+  <form method="post" action="/users/cars/<%= car.id %>/delete" class="wishlist">
     <input type="hidden" name="_method" value="delete"></input>
-    <button type="submit" class="pure-button pure-button-primary" id="<%= car.id %>">Delete</button>
+    <button type="submit" class="pure-button" id="<%= car.id %>">Delete</button>
   </form>
 <% end %>
 </ul>
