--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
                 <% if is_logged_in? && is_dealer? %>
 
                     <li class="pure-menu-item">
-                        <a href="/cars" class="pure-menu-link"> <%= @current_user.user_name.capitalize %>'s Cars </a>
+                        <a href="/cars" class="pure-menu-link"> <%= @current_user.user_name.upcase %>'s Cars </a>
                     </li>
 
                     <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
@@ -48,7 +48,7 @@
                 <% elsif is_logged_in? %>
 
                     <li class="pure-menu-item">
-                        <a href="/users/<%= current_user.id %>/wishlist" class="pure-menu-link"><%= current_user.user_name.capitalize %>'s Wishlist</a>
+                        <a href="/users/<%= current_user.id %>/wishlist" class="pure-menu-link"><%= current_user.user_name.upcase %>'s Wishlist</a>
                     </li>
 
                     <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
