--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@ li {
 #menu {
   position: fixed;
   background: #2D3142;
-  width: 190px;
+  width: 205px;
   height: 100vh;
 }
 
@@ -90,8 +90,8 @@ section.login {
   margin-left: 20px;
 }
 
-.pure-button-primary {
-  margin-top: 150px;
+.pure-button.login {
+  margin-top: 130px;
   color: #F8F8F8;
 }
 
