changed bottom border register

--- a/app/views/authorizations/register.erb
+++ b/app/views/authorizations/register.erb
@@ -5,7 +5,7 @@
         <li class="pure-u-1">
             <form class="pure-form pure-form-stacked" class="register" method="post" action="/register">
               <fieldset>
-                <legend>Register</legend>
+                <legend class="register">Register</legend>
 
                 <label for="email">Email</label>
                 <input name="user[email]" id="email" type="user_email" placeholder="Email">
