--- a/app/views/cars/new.erb
+++ b/app/views/cars/new.erb
@@ -1,11 +1,12 @@
+<section class="new-car">
+
+
 <h1>ADD NEW CAR</h1>
 
 <div class="pure-g">
   <li class="pure-u-1">
     <form class="pure-form pure-form-stacked" class="new-car" method="post" action="/cars">
       <fieldset>
-
-      <legend></legend>
 
         <label for="make">Make</label>
         <input name="car[make]" id="make" type="make" placeholder="Make">
@@ -28,3 +29,4 @@
     </form>
   </li>
 </div>
+</section>
