changed the case of header for car profile

--- a/app/views/authorizations/register.erb
+++ b/app/views/authorizations/register.erb
@@ -1,11 +1,12 @@
 
 <section class="register"> 
 
+<h1>REGISTER</h1>
+
     <div class="pure-g">
         <li class="pure-u-1">
             <form class="pure-form pure-form-stacked" class="register" method="post" action="/register">
               <fieldset>
-                <legend class="register">Register</legend>
 
                 <label for="email">Email</label>
                 <input name="user[email]" id="email" type="user_email" placeholder="Email">
