--- a/app/views/cars/show.erb
+++ b/app/views/cars/show.erb
@@ -2,7 +2,7 @@
 <section class="car-profile">
 
 
-<h1><%= @car.make%> <%= @car.model %> </h1>
+<h1><%= @car.make.upcase%> <%= @car.model.upcase %> </h1>
 
 <ul>
   <li>
