added about page content

--- a/app/views/statics/about.erb
+++ b/app/views/statics/about.erb
@@ -2,4 +2,6 @@
 
 <h1><i class="fa fa-users"></i>ABOUT</h1>
 
+<p> CARfetch is a premiere app for luxury car enthusiasts in search of the newest and most exoctic vehicles. Our goal is to eliminate the hassel that comes with purchasing a new car. Adding a vehicle to your wishlist initiates correspondence with the dealership and gets you one step closer to owning your dream car. No more wasting time walking around car lots or hearing pitches about cars that don't strike your fancy. Your car will be held and waiting for you upon arrival. Take the fast track to your dream car today with CARfetch!  </p>
+
 </section>
