added contact page content

--- a/app/views/statics/contact.erb
+++ b/app/views/statics/contact.erb
@@ -2,4 +2,6 @@
 
 <h1><i class="fa fa-laptop"></i>CONTACT</h1>
 
+<p> If you have a burning desire to share any words of wisdom, praise or disdain, feel free to drop us a line.<br><br> We'd also love to hear from you if you're intrested in joining our team. Don't be shy!<br><br>Contact: <a href="http://www.gmail.com">mackdaddy@carfetch.com</a></p>   
+
 </section>
