--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,10 @@ li {
   height: 40vh;
 }
 
+img{
+  border: 3px solid #2D3142;
+  border-radius: 4.5px;
+}
 
 .car-item:nth-child(-n+2) {
   width: 40vw;
@@ -39,6 +43,11 @@ li {
 
 #menu, .container {
   display: inline-block;
+}
+
+a {
+  color:#2D3142;
+  text-decoration: none;
 }
 
 .container {
