--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,17 @@
-@font-face { font-family: Disco; src: url('DISCO__.otf'); } 
+@font-face {
+    font-family: 'discoregular';
+    src: url('DISCO___-webfont.eot');
+    src: url('DISCO___-webfont.eot?#iefix') format('embedded-opentype'),
+         url('DISCO___-webfont.woff') format('woff'),
+         url('DISCO___-webfont.ttf') format('truetype'),
+         url('DISCO___-webfont.svg#discoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 
 body {
-  font-family: disco;
+  font-family: discoregular;
   font-weight: bold;
   background: #F8F8F8;
   height: 100%;
