--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,11 +5,11 @@
   <%= css :application %>
   <%= js :application %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <style>
-  @font-face { font-family: Disco; src: url('DISCO__.TTF'); } 
-  h1 {
-  font-family: Disco
-  }
+  <style>  html, button, input, select, textarea,
+    .pure-g [class *= "pure-u"] {
+      font-family: "MyWebFont", DISCO___-webfont !important;
+    }
+
   </style>
 </head>
 <body>
