--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <style>  html, button, input, select, textarea,
     .pure-g [class *= "pure-u"] {
-      font-family: "MyWebFont", discoregular !important, Helvetica, sans-serif;
+      font-family: 'discoregular', !important;
     }
 
   </style>
