--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'MyWebFont';
+    font-family: 'discoregular';
     src: font-url('./public/stylsheets/fonts/DISCO___-webfont.eot');
     src: font-url('./public/stylsheets/fonts/DISCO___-webfont.eot?#iefix') format('embedded-opentype'),
          font-url('./public/stylsheets/fonts/DISCO___-webfont.woff') format('woff'),
@@ -11,11 +11,11 @@
 }
 
 * {
-    font-family: 'MyWebFont';
+    font-family: 'discoregular';
 }
 
 body {
-  font-family: 'MyWebFont';
+  font-family: 'discoregular';
   font-weight: bold;
   background: #F8F8F8;
   height: 100%;
