--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'discoregular';
     src: font-url('./public/stylsheets/fonts/DISCO___-webfont.eot');
     src: font-url('./public/stylsheets/fonts/DISCO___-webfont.eot?#iefix') format('embedded-opentype'),
@@ -12,10 +12,10 @@
 
 * {
     font-family: 'discoregular';
-}
+}*/
 
 body {
-  font-family: 'discoregular';
+  font-family: disco;
   font-weight: bold;
   background: #F8F8F8;
   height: 100%;
@@ -134,7 +134,6 @@ section.login {
 .pure-button.login {
   margin-top: 130px;
   color: #F8F8F8;
-  border-radius: 20px;
 }
 
 section.login h1{
@@ -255,4 +254,3 @@ section.contact p{
    text-align: center;
    margin: 80px 120px 80px 120px;
 }
-
